Update to .NET 10, improve culture management logic
Bump target frameworks to .NET 10 and update global.json accordingly. Refactor CultureManager to improve thread culture synchronization and UI culture updates, including dispatcher-safe updates and better null handling. Minor XAML and code style fixes, and show culture notify icon when debugging. Also update version to 1.0 and rename Version.json to version.json.

--- a/src/Localisation.WPF.TestApp/MainWindow.xaml
+++ b/src/Localisation.WPF.TestApp/MainWindow.xaml
@@ -4,12 +4,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Localisation.WPF.TestApp"
+    xmlns:loc="clr-namespace:CP.Localisation;assembly=Localisation.WPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
     Width="800"
     Height="450"
     Language="{UICulture}"
-    ResxExtension.DefaultResxName="Localisation.WPF.TestApp.Properties.Resources"
+    loc:ResxExtension.DefaultResxName="Localisation.WPF.TestApp.Properties.Resources"
     mc:Ignorable="d">
     <Grid>
         <TextBlock Text="{Resx Test1}" />
